--- a/Messenger/!Docker/docker-compose.yml
+++ b/Messenger/!Docker/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '2.1'
 
 services:
-  messenger-db-node:
+  msgdb-node-1:
     build:
-      context: mariadb
+      context: mysql
       dockerfile: Dockerfile
-    container_name: messenger-db-node
+    container_name: msgdb-node-1
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: msgdb
@@ -23,9 +23,61 @@ services:
     healthcheck:
       test: "/usr/bin/mysql --user=msguser --password=msguser --execute \"SHOW DATABASES;\""
       timeout: 20s
-      retries: 5
+      retries: 20
     volumes:
-      - msg-db-node-data:/var/lib/mysql
+      - msgdb-n1-data:/var/lib/mysql
+
+  msgdb-node-2:
+    build:
+      context: mysql
+      dockerfile: Dockerfile
+    container_name: msgdb-node-2
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: msgdb
+      MYSQL_USER: msguser
+      MYSQL_PASSWORD: msguser
+      MYSQL_ROOT_PASSWORD: '1'
+    command: >
+      --sql-mode='STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION'
+      --general-log=ON
+      --log-queries-not-using-indexes=ON
+    networks:
+      - msg-network
+    ports:
+      - 3361:3306
+    healthcheck:
+      test: "/usr/bin/mysql --user=msguser --password=msguser --execute \"SHOW DATABASES;\""
+      timeout: 20s
+      retries: 20
+    volumes:
+      - msgdb-n2-data:/var/lib/mysql
+
+  proxysql:
+    build:
+      context: proxysql
+      dockerfile: Dockerfile
+    container_name: proxysql
+    command: >
+      --initial
+    volumes:
+      - proxysql-data:/var/lib/proxysql
+    healthcheck:
+      test: "/usr/bin/mysql --user=msguser --password=msguser --execute \"SHOW DATABASES;\""
+      timeout: 20s
+      retries: 5
+    networks:
+      - msg-network
+    ports:
+      # Mysql Client Port
+      - "6033:6033"
+      # Mysql Admin Port
+      - "6032:6032"
+    depends_on:
+      msgdb-node-1:
+        condition: service_healthy
+      msgdb-node-2:
+        condition: service_healthy
 
   user_service:
     build:
@@ -33,8 +85,8 @@ services:
       dockerfile: Dockerfile
     container_name: user_service
     environment:
-      - DB_HOST=messenger-db-node
-      - DB_PORT=3306
+      - DB_HOST=proxysql
+      - DB_PORT=6033
       - DB_LOGIN=msguser
       - DB_PASSWORD=msguser
       - DB_DATABASE=msgdb
@@ -43,9 +95,8 @@ services:
     networks:
       - msg-network
     depends_on:
-      messenger-db-node:
-        condition: service_healthy
-    
+      - proxysql
+
   group_service:
     build:
       context: GroupService
@@ -53,8 +104,8 @@ services:
     container_name: group_service
     environment:
       - SERVICE_HOST=user_service
-      - DB_HOST=messenger-db-node
-      - DB_PORT=3306
+      - DB_HOST=proxysql
+      - DB_PORT=6033
       - DB_LOGIN=msguser
       - DB_PASSWORD=msguser
       - DB_DATABASE=msgdb
@@ -73,8 +124,8 @@ services:
     container_name: p2p_service
     environment:
       - SERVICE_HOST=user_service
-      - DB_HOST=messenger-db-node
-      - DB_PORT=3306
+      - DB_HOST=proxysql
+      - DB_PORT=6033
       - DB_LOGIN=msguser
       - DB_PASSWORD=msguser
       - DB_DATABASE=msgdb
@@ -87,7 +138,9 @@ services:
         condition: service_started
 
 volumes:
-  msg-db-node-data:
+  msgdb-n1-data:
+  msgdb-n2-data:
+  proxysql-data:
 
 networks:
   msg-network:
